--- a/cartao_default.ipynb
+++ b/cartao_default.ipynb
@@ -1720,7 +1720,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# apenas para slvar"
+   ]
   },
   {
    "cell_type": "code",
